[Feature] Update kahoot
